[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Invader.gd" type="Script" id=1]
[ext_resource path="res://Materials/GlowMat.tres" type="Material" id=2]
[ext_resource path="res://Sprites/invader01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/explosion.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0848

[node name="Invader" type="Node2D"]
script = ExtResource( 1 )
speed = 10.0

[node name="InvaderSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1.6, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1.8, 0.2, 0.2, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 1.25
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_collision"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
